# graphvite

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: FindGFlags.cmake  FindGlog.cmake  FindPythonLibsNew.cmake
conda/: conda_build_config.yaml  requirements.txt
conda/graphvite/: meta.yaml
conda/graphvite-mini/: build.sh  meta.yaml
config/: quick_start.yaml
config/demo/: math.yaml  quick_start.yaml
config/graph/: deepwalk_flickr.yaml  deepwalk_friendster-small.yaml  deepwalk_friendster.yaml  deepwalk_hyperlink-pld.yaml  deepwalk_youtube.yaml  line_flickr.yaml  line_friendster-small.yaml  line_friendster.yaml  line_hyperlink-pld.yaml  line_youtube.yaml  node2vec_youtube.yaml
config/knowledge_graph/: complex_fb15k-237.yaml  complex_fb15k.yaml  complex_wikidata5m.yaml  complex_wn18.yaml  complex_wn18rr.yaml  distmult_fb15k-237.yaml  distmult_fb15k.yaml  distmult_wikidata5m.yaml  distmult_wn18.yaml  distmult_wn18rr.yaml  quate_fb15k-237.yaml  quate_fb15k.yaml  quate_wikidata5m.yaml  quate_wn18.yaml  quate_wn18rr.yaml  rotate_fb15k-237.yaml  rotate_fb15k.yaml  rotate_wikidata5m.yaml  rotate_wn18.yaml  rotate_wn18rr.yaml  simple_fb15k-237.yaml  simple_fb15k.yaml  simple_wikidata5m.yaml  simple_wn18.yaml  simple_wn18rr.yaml  transe_fb15k-237.yaml  transe_fb15k.yaml  transe_wikidata5m.yaml  transe_wn18.yaml  transe_wn18rr.yaml
config/template/: graph.yaml  knowledge_graph.yaml  visualization.yaml  word_graph.yaml
config/visualization/: largevis_imagenet.yaml  largevis_mnist_2d.yaml  largevis_mnist_3d.yaml
config/word_graph/: line_wikipedia.yaml
doc/source/: benchmark.rst  conf.py  faq.rst  index.rst  install.rst  introduction.rst  link.rst  overview.rst  pretrained_model.rst  quick_start.rst
doc/source/api/: application.rst  dataset.rst  graph.rst  optimizer.rst  solver.rst
doc/source/developer/: framework.rst  model.rst  routine.rst  solver.rst
doc/source/user/: auto.rst  command_line.rst  configuration.rst  format.rst  python.rst
include/: bind.h
include/base/: alias_table.cuh  memory.h  vector.h
include/core/: graph.h  optimizer.h  solver.h
include/gpu/: graph.cuh  knowledge_graph.cuh  visualization.cuh
include/instance/: graph.cuh  knowledge_graph.cuh  visualization.cuh  word_graph.cuh
include/instance/gpu/: graph.cuh  knowledge_graph.cuh  visualization.cuh
include/instance/model/: graph.h  knowledge_graph.h  visualization.h
include/util/: common.h  debug.h  gpu.cuh  io.h  math.h  time.h
python/: setup.py
python/graphvite/: __init__.py  base.py  cmd.py  dataset.py  graph.py  helper.py  optimizer.py  solver.py  util.py
python/graphvite/application/: __init__.py  application.py  network.py
src/: CMakeLists.txt  graphvite.cu
